change panel admin front and backend code

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block page_title %}فروشگاه کدینگ‌یار{% endblock %}</title>
+    <title>{% block page_title %}فروشگاه دیجی شاپ{% endblock %}</title>
     
     <!-- Favicon -->
     <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
@@ -258,7 +258,7 @@
             <div class="container-fluid px-0">
                 <!-- Logo -->
                 <a href="{% url 'product_list' %}" class="logo-text">
-                    <i class="fas fa-store"></i> کدینگ‌یار
+                    <i class="fas fa-store"></i> دیجی شاپ
                 </a>
                 
                 <!-- Mobile Toggle -->
@@ -374,10 +374,10 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 mb-4">
                 <h5 class="footer-heading">
-                    <i class="fas fa-store"></i> کدینگ‌یار
+                    <i class="fas fa-store"></i> دیجی شاپ
                 </h5>
                 <p style="color: #cbd5e0; line-height: 1.8;">
-                    فروشگاه آنلاین محصولات دیجیتال و الکترونیک با بهترین قیمت و کیفیت
+                    فروشگاه آنلاین محصولات دیجیتال با بهترین قیمت و کیفیت
                 </p>
             </div>
             
@@ -406,13 +406,13 @@
                     <i class="fas fa-phone"></i> ۰۲۱-۱۲۳۴۵۶۷۸
                 </p>
                 <p style="color: #cbd5e0;">
-                    <i class="fas fa-envelope"></i> info@codingyar.com
+                    <i class="fas fa-envelope"></i> info@DigiShop.com
                 </p>
             </div>
         </div>
         
         <div class="footer-bottom">
-            <p>© ۱۴۰۳ کدینگ‌یار. تمامی حقوق محفوظ است.</p>
+            <p>© 1404 دیجی شاپ. تمامی حقوق محفوظ است.</p>
         </div>
     </div>
 </footer>
