--- a/templates/footer.html
+++ b/templates/footer.html
@@ -19,7 +19,7 @@
                         </ul>
                     </div>
                     <div class="footer-widget">
-                        Codingyar.com © | all rights reserved
+                        Digishop.com © | all rights reserved
                     </div>
                 </div>
             </div>
