--- a/payment/templates/payment/payment_success.html
+++ b/payment/templates/payment/payment_success.html
@@ -177,10 +177,11 @@
                 <i class="fas fa-shopping-bag"></i>
                 ادامه خرید
             </a>
-            <a href="#" class="btn-secondary">
-                <i class="fas fa-list-ul"></i>
-                مشاهده سفارش‌ها
+            <a href="{% url 'order_list' %}" class="btn-secondary">
+                 <i class="fas fa-list-ul"></i>
+                 مشاهده سفارش‌ها
             </a>
+
         </div>
         
         <p style="margin-top: 30px; font-size: 14px; color: #adb5bd;">
